--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "kriswallsmith/assetic": "~1.0",
+        "kriswallsmith/assetic": "v1.4.0",
         "symfony/finder": "~3.0"
     },
     "require-dev": {
